--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   	<!-- meta info -->
     <meta name="description" content="Let’s start establishing the world of lupus together, today."/>
     <!-- styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
   <body>
