asset section init

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   	<!-- meta info -->
     <meta name="description" content="Let’s start establishing the world of lupus together, today."/>
     <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
   <body>
@@ -20,6 +21,39 @@
         <!--<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">-->
         <source src="assets/vid/background.mp4" type="video/mp4">
       </video>
+    </div>
+    <div class="the-assets">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
+            <div class="module">
+              <h2>Our Proposal</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <a href="assets/docs/belief-map.pdf" download>
+                <span class="button">Download</span>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
+            <div class="module">
+              <h2>CBI</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <a href="">
+                <span class="button">Watch Video</span>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
+            <div class="module">
+              <h2>Our Beliefs</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <a href="assets/docs/belief-map.pdf" download>
+                <span class="button">Download</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
 
