--- a/index.html
+++ b/index.html
@@ -13,22 +13,41 @@
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <a href="https://www.havashealthplus.com/" target="_blank">
+              <img src="assets/images/havas-logo.png" width="100%"/>
+            </a>
+          </div>
+          <div class="col-6">
+            <a href="https://www.astrazeneca.com/" target="_blank">
+              <img class="right" src="assets/images/az-logo.png" width="100%"/>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="intro">
       <div class="feature">
         <h1>Let’s start establishing the world of lupus together, today.</h1>
       </div>
       <video poster="assets/images/bg.jpg" id="bgvid" playsinline autoplay muted loop>
-        <!--<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">-->
+        <source src="assets/vid/background.webm" type="video/webm">
         <source src="assets/vid/background.mp4" type="video/mp4">
       </video>
     </div>
     <div class="the-assets">
       <div class="container">
         <div class="row">
+          <h2>Information</h2>
+        </div>
+        <div class="row">
           <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
             <div class="module">
               <h2>Our Proposal</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Talking You Beyond.</p>
               <a href="assets/docs/belief-map.pdf" download>
                 <span class="button">Download</span>
               </a>
@@ -45,12 +64,25 @@
           </div>
           <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
             <div class="module">
-              <h2>Our Beliefs</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h2>Belief Map</h2>
+              <p>Do More For More.</p>
               <a href="assets/docs/belief-map.pdf" download>
                 <span class="button">Download</span>
               </a>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team">
+      <div class="container">
+        <div class="row">
+          <h2>Our Team</h2>
+        </div>
+        <div class="row">
+          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
+            <img src="assets/images/dennis.png" width="100%"/>
+            <p>Dennis Urbaniak</p>
           </div>
         </div>
       </div>
