asset and team updates

--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
         <source src="assets/vid/background.mp4" type="video/mp4">
       </video>
     </div>
+
     <div class="the-assets">
       <div class="container">
         <div class="row">
           <h2>Information</h2>
         </div>
         <div class="row">
-          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
+          <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
             <div class="module">
               <h2>Our Proposal</h2>
               <p>Talking You Beyond.</p>
@@ -53,16 +54,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
-            <div class="module">
-              <h2>CBI</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <a href="">
-                <span class="button">Watch Video</span>
-              </a>
-            </div>
-          </div>
-          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
+          <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
             <div class="module">
               <h2>Belief Map</h2>
               <p>Do More For More.</p>
@@ -70,6 +62,25 @@
                 <span class="button">Download</span>
               </a>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <video poster="assets/images/first-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/first-video.ogg" type="video/ogg">
+              <source src="assets/vid/first-video.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-12">
+            <video poster="assets/images/second-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/second-video.ogg" type="video/ogg">
+              <source src="assets/vid/second-video.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-12">
+            <video poster="assets/images/third-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/background.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
@@ -80,15 +91,41 @@
           <h2>Our Team</h2>
         </div>
         <div class="row">
-          <div class="col-12 col-sm-10 offset-sm-1 col-md-4 offset-md-0">
-            <img src="assets/images/dennis.png" width="100%"/>
-            <p>Dennis Urbaniak</p>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/dennis.jpg" width="100%"/>
+            <p>Dennis Urbaniak<br>CEO</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/eric.jpg" width="100%"/>
+            <p>Eric Shaffer<br>Brand Leader</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/matt.jpg" width="100%"/>
+            <p>Matt Franowicz, PhD<br>Strategic Partner</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/ryan.jpg" width="100%"/>
+            <p>Ryan Goldberg<br>Art Direction</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/rochelle.jpg" width="100%"/>
+            <p>Rochelle Melton<br>Creative Director</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/todd.jpg" width="100%"/>
+            <p>Todd Kolm<br>Engagement</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/elizabeth.jpg" width="100%"/>
+            <p>Elizabeth Cassata<br>Account</p>
+          </div>
+          <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
+            <img src="assets/images/brad.jpg" width="100%"/>
+            <p>Brad Sellars<br>Global</p>
           </div>
         </div>
       </div>
     </div>
-
-
   	<!-- scripts -->
   	<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="assets/scripts/main.js"></script>
