--- a/index.html
+++ b/index.html
@@ -93,35 +93,35 @@
         <div class="row">
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/dennis.jpg" width="100%"/>
-            <p>Dennis Urbaniak<br>CEO</p>
+            <p>Dennis Urbaniak<br><span>CEO</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/eric.jpg" width="100%"/>
-            <p>Eric Shaffer<br>Brand Leader</p>
+            <p>Eric Shaffer<br><span>Brand Leader</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/matt.jpg" width="100%"/>
-            <p>Matt Franowicz, PhD<br>Strategic Partner</p>
+            <p>Matt Franowicz, PhD<br><span>Strategic Partner</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/ryan.jpg" width="100%"/>
-            <p>Ryan Goldberg<br>Art Direction</p>
+            <p>Ryan Goldberg<br><span>Art Direction</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/rochelle.jpg" width="100%"/>
-            <p>Rochelle Melton<br>Creative Director</p>
+            <p>Rochelle Melton<br><span>Creative Director</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/todd.jpg" width="100%"/>
-            <p>Todd Kolm<br>Engagement</p>
+            <p>Todd Kolm<br><span>Engagement</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/elizabeth.jpg" width="100%"/>
-            <p>Elizabeth Cassata<br>Account</p>
+            <p>Elizabeth Cassata<br><span>Account</span></p>
           </div>
           <div class="col-10 offset-1 col-md-4 offset-md-0 col-xl-3">
             <img src="assets/images/brad.jpg" width="100%"/>
-            <p>Brad Sellars<br>Global</p>
+            <p>Brad Sellars<br><span>Global</span></p>
           </div>
         </div>
       </div>
