taking you beyond*

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
             <div class="module">
               <h2>Our Proposal</h2>
-              <p>Talking You Beyond.</p>
+              <p>Taking You Beyond.</p>
               <a href="assets/docs/belief-map.pdf" download>
                 <span class="button">Download</span>
               </a>
