--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="module">
               <h2>Belief Map</h2>
               <p>Do More For More.</p>
-              <a href="assets/docs/belief-map.pdf" download>
+              <!--<a href="assets/docs/belief-map.pdf" download>-->
+              <a href="">
                 <span class="button">Download</span>
               </a>
             </div>
