pdf removal cont.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <div class="module">
               <h2>Our Proposal</h2>
               <p>Taking You Beyond.</p>
-              <a href="assets/docs/belief-map.pdf" download>
+              <!--<a href="assets/docs/belief-map.pdf" download>-->
+              <a href="">
                 <span class="button">Download</span>
               </a>
             </div>
