pw protected pdf

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             <div class="module">
               <h2>Our Proposal</h2>
               <p>Taking You Beyond.</p>
-              <!--<a href="assets/docs/belief-map.pdf" download>-->
-              <a href="">
+              <a href="assets/docs/belief-map.pdf" download>
                 <span class="button">Download</span>
               </a>
             </div>
