--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="intro">
       <div class="feature">
-        <h1>Let’s start establishing the world of lupus together, today.</h1>
+        <h1>Taking You Beyond to Establishing The World Of Lupus</h1>
       </div>
       <video poster="assets/images/bg.jpg" id="bgvid" playsinline autoplay muted loop>
         <source src="assets/vid/background.webm" type="video/webm">
@@ -92,37 +92,41 @@
           <h2>Our Team</h2>
         </div>
         <div class="row">
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/dennis.jpg" width="100%"/>
-            <p>Dennis Urbaniak<br><span>CEO</span></p>
+            <p>Dennis Urbaniak<br><span>Executive Sponsor</span></p>
           </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/eric.jpg" width="100%"/>
-            <p>Eric Shaffer<br><span>Brand Leader</span></p>
+            <p>Eric Shaffer<br><span>Account</span></p>
           </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
-            <img src="assets/images/matt.jpg" width="100%"/>
-            <p>Matt Franowicz, PhD<br><span>Strategic Partner</span></p>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/brad.jpg" width="100%"/>
+            <p>Brad Sellars<br><span>Global</span></p>
           </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
-            <img src="assets/images/ryan.jpg" width="100%"/>
-            <p>Ryan Goldberg<br><span>Art Direction</span></p>
-          </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
-            <img src="assets/images/rochelle.jpg" width="100%"/>
-            <p>Rochelle Melton<br><span>Creative Director</span></p>
-          </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
-            <img src="assets/images/todd.jpg" width="100%"/>
-            <p>Todd Kolm<br><span>Engagement</span></p>
-          </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/elizabeth.jpg" width="100%"/>
             <p>Elizabeth Cassata<br><span>Account</span></p>
           </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4 col-xl-3">
-            <img src="assets/images/brad.jpg" width="100%"/>
-            <p>Brad Sellars<br><span>Global</span></p>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/matt.jpg" width="100%"/>
+            <p>Matt Franowicz, PhD<br><span>Strategy</span></p>
+          </div>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/todd.jpg" width="100%"/>
+            <p>Todd Kolm<br><span>Innovation</span></p>
+          </div>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/rochelle.jpg" width="100%"/>
+            <p>Rochelle Melton<br><span>Creative</span></p>
+          </div>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/ryan.jpg" width="100%"/>
+            <p>Ryan Goldberg<br><span>Creative</span></p>
+          </div>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/chloe.png" width="100%"/>
+            <p>Chloe Nevitt<br><span>Creative</span></p>
           </div>
         </div>
       </div>
