--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="intro">
       <div class="feature">
-        <h1>Taking You Beyond to Establishing The World Of Lupus</h1>
+        <h1>Establishing The World<br>Of Lupus</h1>
       </div>
       <video poster="assets/images/bg.jpg" id="bgvid" playsinline autoplay muted loop>
         <source src="assets/vid/background.webm" type="video/webm">
@@ -42,13 +42,9 @@
     <div class="the-assets">
       <div class="container">
         <div class="row">
-          <h2>Information</h2>
-        </div>
-        <div class="row">
           <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
             <div class="module">
               <h2>Our Proposal</h2>
-              <p>Taking You Beyond.</p>
               <!--<a href="assets/docs/belief-map.pdf" download>-->
               <a href="">
                 <span class="button">Download</span>
@@ -58,7 +54,6 @@
           <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
             <div class="module">
               <h2>Belief Map</h2>
-              <p>Do More For More.</p>
               <a href="assets/docs/belief-map.pdf" download>
                 <span class="button">Download</span>
               </a>
@@ -97,12 +92,12 @@
             <p>Dennis Urbaniak<br><span>Executive Sponsor</span></p>
           </div>
           <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
-            <img src="assets/images/eric.jpg" width="100%"/>
-            <p>Eric Shaffer<br><span>Account</span></p>
-          </div>
-          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/brad.jpg" width="100%"/>
             <p>Brad Sellars<br><span>Global</span></p>
+          </div>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/eric.jpg" width="100%"/>
+            <p>Eric Shaffer<br><span>Account</span></p>
           </div>
           <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/elizabeth.jpg" width="100%"/>
