--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
           <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
             <div class="module">
               <h2>Our Proposal</h2>
-              <!--<a href="assets/docs/belief-map.pdf" download>-->
-              <a href="">
+              <a href="assets/docs/AstraZeneca-Proposal.pdf" download>
                 <span class="button">Download</span>
               </a>
             </div>
