--- a/index.html
+++ b/index.html
@@ -38,19 +38,18 @@
         <source src="assets/vid/background.mp4" type="video/mp4">
       </video>
     </div>
-
     <div class="the-assets">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
+          <div class="col-12 col-md-6">
             <div class="module">
-              <h2>Our Proposal</h2>
-              <a href="assets/docs/AstraZeneca-Proposal.pdf" download>
+              <h2>Pitch Deck</h2>
+              <a href="http://gs01-srv005.globalservs.com/MultipleUpload/Download.aspx?fileId=%2fM%2fGeGahxtSiLnsX954gCA%3d%3d" download>
                 <span class="button">Download</span>
               </a>
             </div>
           </div>
-          <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
+          <div class="col-12 col-md-6">
             <div class="module">
               <h2>Belief Map</h2>
               <a href="assets/docs/belief-map.pdf" download>
@@ -61,20 +60,15 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <video poster="assets/images/third-video-placeholder.jpg" id="video" playsinline controls loop>
-              <source src="assets/vid/background.mp4" type="video/mp4">
+            <h2>The Flux Visualizer</h2>
+            <video poster="assets/images/flux-placeholder.png" id="video" playsinline controls loop>
+              <source src="assets/vid/flux.mp4" type="video/mp4">
             </video>
           </div>
           <div class="col-12">
-            <video poster="assets/images/second-video-placeholder.jpg" id="video" playsinline controls loop>
-              <source src="assets/vid/second-video.ogg" type="video/ogg">
-              <source src="assets/vid/second-video.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="col-12">
-            <video poster="assets/images/first-video-placeholder.jpg" id="video" playsinline controls loop>
-              <source src="assets/vid/first-video.ogg" type="video/ogg">
-              <source src="assets/vid/first-video.mp4" type="video/mp4">
+            <h2>Meet Marla</h2>
+            <video poster="assets/images/marla-placeholder.png" id="video" playsinline controls loop>
+              <source src="assets/vid/marla.mp4" type="video/mp4">
             </video>
           </div>
         </div>
@@ -121,6 +115,32 @@
           <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/chloe.png" width="100%"/>
             <p>Chloe Nevitt<br><span>Creative</span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="vids">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>CBI: Do More, For More</h2>
+            <video poster="assets/images/third-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/background.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-12">
+            <h2>How We Work</h2>
+            <video poster="assets/images/second-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/second-video.ogg" type="video/ogg">
+              <source src="assets/vid/second-video.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-12">
+            <h2>Who We Are</h2>
+            <video poster="assets/images/first-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/first-video.ogg" type="video/ogg">
+              <source src="assets/vid/first-video.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
