--- a/index.html
+++ b/index.html
@@ -60,15 +60,37 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <h2>The Flux Visualizer</h2>
+            <h2 class="vid-title">The Flux Visualizer</h2>
             <video poster="assets/images/flux-placeholder.png" id="video" playsinline controls loop>
               <source src="assets/vid/flux.mp4" type="video/mp4">
             </video>
           </div>
           <div class="col-12">
-            <h2>Meet Marla</h2>
+            <h2 class="vid-title">Meet Marla</h2>
             <video poster="assets/images/marla-placeholder.png" id="video" playsinline controls loop>
               <source src="assets/vid/marla.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <h2 class="vid-title">CBI: Do More, For More</h2>
+            <video poster="assets/images/third-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/background.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-12 col-lg-4">
+            <h2 class="vid-title">How We Work</h2>
+            <video poster="assets/images/second-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/second-video.ogg" type="video/ogg">
+              <source src="assets/vid/second-video.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-12 col-lg-4">
+            <h2 class="vid-title">Who We Are</h2>
+            <video poster="assets/images/first-video-placeholder.jpg" id="video" playsinline controls loop>
+              <source src="assets/vid/first-video.ogg" type="video/ogg">
+              <source src="assets/vid/first-video.mp4" type="video/mp4">
             </video>
           </div>
         </div>
@@ -121,28 +143,7 @@
     </div>
     <div class="vids">
       <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2>CBI: Do More, For More</h2>
-            <video poster="assets/images/third-video-placeholder.jpg" id="video" playsinline controls loop>
-              <source src="assets/vid/background.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="col-12">
-            <h2>How We Work</h2>
-            <video poster="assets/images/second-video-placeholder.jpg" id="video" playsinline controls loop>
-              <source src="assets/vid/second-video.ogg" type="video/ogg">
-              <source src="assets/vid/second-video.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="col-12">
-            <h2>Who We Are</h2>
-            <video poster="assets/images/first-video-placeholder.jpg" id="video" playsinline controls loop>
-              <source src="assets/vid/first-video.ogg" type="video/ogg">
-              <source src="assets/vid/first-video.mp4" type="video/mp4">
-            </video>
-          </div>
-        </div>
+        
       </div>
     </div>
   	<!-- scripts -->
