--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <h2 class="vid-title">Thank you from HH+!</h2>
+            <h2 class="vid-title">Thank You From HH+!</h2>
             <video poster="assets/images/thank-you.png" id="video" playsinline controls loop>
               <source src="assets/vid/thank-you.mp4" type="video/mp4">
             </video>
