--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
             <p>Brad Sellars<br><span>Global</span></p>
           </div>
           <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
+            <img src="assets/images/karsten.png" width="100%"/>
+            <p>Karsten Risch, MD, PhD, MPH<br><span>Medical</span></p>
+          </div>
+          <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-md-4">
             <img src="assets/images/eric.jpg" width="100%"/>
             <p>Eric Shaffer<br><span>Account</span></p>
           </div>
